--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -120,7 +120,7 @@
   "-9113": "缺少scriptFile或executableFile",
   "-9114": "檔案名稱不可為空",
   "-9115": "檔案大小不可為0",
-  "-9116": "回報NCCST失敗， 請檢查API_URL設定",
+  "-9116": "回報NCCST失敗",
 
   "-10222": "設備代號已存在",
   "-10322": "機關OID已存在",
