--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -121,6 +121,7 @@
   "-9114": "檔案名稱不可為空",
   "-9115": "檔案大小不可為0",
   "-9116": "回報NCCST失敗",
+  "-9117": "帳號SOC角色無法過審該單",
 
   "-10222": "設備代號已存在",
   "-10322": "機關OID已存在",
