Begin adding cell phone list to the SOC contact functionality.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -280,6 +280,7 @@
   "txt-mixName": "Department & Title Management",
   "txt-plsEnterName": "Please enter a name",
   "txt-plsEnterEmail": "Please enter an Email",
+  "txt-plsEnterPhoneEmail": "Please enter a phone number or email",
   "txt-memoMaxLength": "maximum 250 characters",
   "txt-updateTime": "Update Time",
   "txt-timeRangeError": "Please check your time range",
@@ -653,6 +654,7 @@
     "txt-operators": "Operators",
     "txt-dump": "Dump",
     "txt-email": "Email",
+    "txt-cellPhone": "Cell Phone",
     "txt-hmd": "HMD",
     "txt-netprobe": "NetProbe",
     "txt-restful_api": "Restful API",
@@ -735,9 +737,10 @@
     "txt-senderAccount": "Sender Account",
     "txt-senderPassword": "Sender Password",
     "txt-recipientEmail": "Recipient Email",
+    "txt-recipientPhone": "Recipient Cell Phone",
     "txt-notifyEmail": "Notify Email Address",
     "txt-emailInvalid": "Please enter the correct email address",
-    "txt-sendSuccess": "Email has been sent successfully",
+    "txt-sendSuccess": "Sent successfully",
     "lineBot": {
       "txt-lineBotSettings": "Line Notification Settings",
       "txt-channelAccessToken": "Channel Access Token",
