--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -280,6 +280,7 @@
   "txt-mixName":"部門與職稱管理",
   "txt-plsEnterName": "請輸入名稱",
   "txt-plsEnterEmail": "請輸入Email",
+  "txt-plsEnterPhoneEmail": "請輸入手機或Email",
   "txt-memoMaxLength": "上限250字",
   "txt-updateTime": "更新時間",
   "txt-timeRangeError": "請檢查時間區間",
@@ -653,6 +654,7 @@
     "txt-operators": "Operators",
     "txt-dump": "Dump",
     "txt-email": "Email",
+    "txt-cellPhone": "手機",
     "txt-hmd": "HMD",
     "txt-netprobe": "NetProbe",
     "txt-restful_api": "Restful API",
@@ -735,6 +737,7 @@
     "txt-senderAccount": "寄件者帳號",
     "txt-senderPassword": "寄件者密碼",
     "txt-recipientEmail": "收件者郵件信箱",
+    "txt-recipientPhone": "收件者手機門號",
     "txt-notifyEmail": "通知郵件信箱",
     "txt-emailInvalid": "請輸入正確的email",
     "txt-sendSuccess": "寄送成功",
