Complete adding the text message for SOC contact list.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -119,6 +119,7 @@
 	"txt-accidentTitle": "Accident Classification and Abnormal Reason",
 	"txt-notifyUnit": "Notification Contact List",
 	"txt-notify": "Notify Contact",
+	"txt-notifySendSuccess": "The contacts has been sent successfully",
 	"txt-reason": "Abnormal Reason",
 	"txt-accidentClassification": "Accident Classification",
 	"txt-reasonDescr": "Accident Reason Description",
