--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -717,6 +717,7 @@
   },
 
   "notifications": {
+    "txt-sendEmails": "Send Emails",
     "txt-testEmails": "Test Emails",
     "txt-settings": "Notification Settings",
     "txt-sync": "Sync Threat-Intelligence",
@@ -740,7 +741,8 @@
     "txt-recipientPhone": "Recipient Cell Phone",
     "txt-notifyEmail": "Notify Email Address",
     "txt-emailInvalid": "Please enter the correct email address",
-    "txt-sendSuccess": "Sent successfully",
+    "txt-sendSuccess": "Email has been sent successfully",
+    "txt-sendFailed": "Contacts sent failed",
     "lineBot": {
       "txt-lineBotSettings": "Line Notification Settings",
       "txt-channelAccessToken": "Channel Access Token",
