--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -377,6 +377,7 @@
     "txt-deviceMap": "裝置地圖",
     "txt-safetyScan": "安全掃描",
     "txt-vans": "VANS",
+    "txt-cveScore": "分數",
     "txt-safetyScanType": "安全掃描類型",
     "txt-export-cpe": "匯出CPE",
     "txt-report-nccst": "回報NCCST",
