Update the filter name for Safety Scan Info. Add download host button for CPE page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -379,6 +379,7 @@
     "txt-vans": "VANS",
     "txt-cveScore": "Score",
     "txt-safetyScanType": "Safety Scan Type",
+    "txt-downloadHostList": "Downlaod Host List",
     "txt-export-cpe": "Export CPE",
     "txt-report-nccst": "Report NCCST",
     "txt-report-nccst-success": "Report Success",
@@ -1248,6 +1249,7 @@
     "system": "System",
     "deviceType": "Type",
     "scanInfo": "Safety Scan Info",
+    "safetyScanInfo": "Safety Scan Info",
     "status": "Custom Group",
     "annotation": "Annotation",
     "keyword": "Keyword",
