--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -379,6 +379,7 @@
     "txt-vans": "VANS",
     "txt-cveScore": "分數",
     "txt-safetyScanType": "安全掃描類型",
+    "txt-downloadHostList": "下載弱點主機清單",
     "txt-export-cpe": "匯出CPE",
     "txt-report-nccst": "回報NCCST",
     "txt-report-nccst-success": "回報成功",
@@ -1248,6 +1249,7 @@
     "system": "使用系統",
     "deviceType": "裝置類型",
     "scanInfo": "安全掃描資訊",
+    "safetyScanInfo": "安全掃描資訊",
     "status": "自定義群組",
     "annotation": "註記",
     "keyword": "關鍵字",
