Add merged CPE upload/download functionality for NCCST. Remove NCCST check list.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -384,8 +384,8 @@
     "txt-report-nccst": "Report NCCST",
     "txt-report-nccst-success": "Report Success",
     "txt-report-nccst-fail": "Report Failed",
-    "txt-report-withCpe": "Please onfirm the following CPE with exploit",
-    "txt-report-noCpe": "No CPE with exploit found",
+    "txt-uploadMergedCpe": "Upload CPE",
+    "txt-downloadMergedCpe": "Download CPE",
     "txt-vansConfigOID": "Unit OID",
     "txt-vansConfigUnitName": "Unit Name",
     "txt-vansConfigApiKey": "API Key",
