--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -115,6 +115,7 @@
   "-9106": "情資匯入錯誤",
   "-9107": "SMS測試失敗",
   "-9108": "SMS餘額不足",
+  "-9019": "檔案不存在",
   "-9110": "FR-MOTP連線失敗",
   "-9111": "FR-MOTP驗證失敗",
   "-9113": "缺少scriptFile或executableFile",
