--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -384,8 +384,8 @@
     "txt-report-nccst": "回報NCCST",
     "txt-report-nccst-success": "回報成功",
     "txt-report-nccst-fail": "回報失敗",
-    "txt-report-withCpe": "請再次確認以下包含漏洞的CPE是否一併送出",
-    "txt-report-noCpe": "無包含漏洞的CPE",
+    "txt-uploadMergedCpe": "上傳合併CPE",
+    "txt-downloadMergedCpe": "下載合併CPE",
     "txt-vansConfigOID": "機關OID",
     "txt-vansConfigUnitName": "機關名稱",
     "txt-vansConfigApiKey": "API Key",
