Add HB Time for Topology Inventory table,

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1178,6 +1178,7 @@
   },
   "payloadsFields": {
     "timestamp": "Date",
+    "hbDttm": "HB Time",
     "vpnName": "VPN Name",
     "channel": "Channel",
     "attacksCount": "Attacks Count",
