--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -1217,6 +1217,7 @@
   },
   "ipFields": {
     "timestamp": "日期",
+    "hbDttm": "HB Time",
     "seat": "座位",
     "seatName": "座位名稱",
     "areaName": "區域名稱",
