Add Vans Record table data for HMD NCCST report section.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -386,6 +386,7 @@
     "txt-report-nccst-fail": "Report Failed",
     "txt-uploadMergedCpe": "Upload CPE",
     "txt-downloadMergedCpe": "Download CPE",
+    "txt-vansRecord": "Vans Record",
     "txt-vansConfigOID": "Unit OID",
     "txt-vansConfigUnitName": "Unit Name",
     "txt-vansConfigApiKey": "API Key",
