Add CPE maintaince page in Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -374,6 +374,7 @@
 
   "host": {
     "txt-hostList": "Host List",
+    "txt-cpePage": "CPE",
     "txt-deviceMap": "Device Map",
     "txt-safetyScan": "Safety Scan",
     "txt-vans": "VANS",
