--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -737,5 +737,22 @@
     "productState": "State",
     "productStatus": "Status",
     "timestamp": "Timestamp"
+  },
+  "hostCpeFields": {
+    "id": "ID",
+    "part": "Part",
+    "vendor": "Vendor",
+    "product": "Product",
+    "version": "Version",
+    "update": "Update",
+    "edition": "Edition",
+    "language": "Language",
+    "swEdition": "SW Edition",
+    "targetSw": "Target SW",
+    "targetHw": "Target HW",
+    "other": "Others",
+    "cpe23uri": "Cpe23Uri",
+    "productCpename": "Product Name",
+    "isMatched": "isMatched"
   }
 }
