--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -374,6 +374,7 @@
 
   "host": {
     "txt-hostList": "主機列表",
+    "txt-cpePage": "CPE維護",
     "txt-deviceMap": "裝置地圖",
     "txt-safetyScan": "安全掃描",
     "txt-vans": "VANS",
