Update locale files.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -134,6 +134,7 @@
   "txt-nextPage": "Next Page",
   "txt-save": "Save",
   "txt-saved": "Saved",
+  "txt-tempSave": "Temporary Save",
   "txt-manage": "Manage",
   "txt-path": "Path",
   "txt-cpu": "CPU",
