--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -134,6 +134,7 @@
   "txt-nextPage": "下一頁",
   "txt-save": "儲存",
   "txt-saved": "已儲存",
+  "txt-tempSave": "暫存",
   "txt-manage": "管理",
   "txt-path": "路徑",
   "txt-cpu": "中央處理器",
