Complete temp save data functionality for SOC incident form.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -101,6 +101,8 @@
 	"txt-editIncident-ttps": "Edit Correlation Analysis Incident",
 	"txt-sendHealthCsv": "Send Health Status Statistic CSV",
 	"txt-exportHealthCsv": "Export Health Status Statistic CSV",
+	"txt-restore": "Restore",
+	"txt-abandon": "Abandon",
 	"txt-id": "ID: ",
 	"txt-incident-id": "Incident ID: ",
 	"txt-ttp-ets": "ETS",
