--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -91,7 +91,7 @@
 	"txt-incident-event": "資安監控",
 	"txt-incident-related": "關聯分析",
 	"txt-incident-health": "健康狀態統計",
-	"txt-tempSaveRetrive": "有暫存是否還原",
+	"txt-tempSaveRestore": "有暫存是否還原",
 	"txt-export-all": "以PDF匯出列表中所有事件單",
 	"txt-export-all-word": "以Word匯出列表中所有事件單",
 	"txt-addIncident-events": "新增資安監控事件單",
@@ -102,6 +102,8 @@
 	"txt-editIncident-ttps": "編輯關聯分析事件單",
 	"txt-sendHealthCsv": "發布健康狀態統計單",
 	"txt-exportHealthCsv": "匯出健康狀態統計單",
+	"txt-restore": "還原",
+	"txt-abandon": "捨棄",
 	"txt-id": "編號: ",
 	"txt-incident-id": "事件單編號: ",
 	"txt-ttp-ets": "漏洞資訊",
