Minor code updates for Host Vans Patch details table.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -685,7 +685,7 @@
     "receiveDttm": "Receive Datetime",
     "receiveCompleteDttm": "Receive Complete Datetime",
     "hbDttm": "Last Connected Datetime",
-    "taskStatus": "Task Status",
+    "sendStatus": "Task Status",
     "executeStatus": "Execute Result",
     "taskStatusDescription": "Task Status Description",
     "deviceCount": "Device Count",
