--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -71,6 +71,7 @@
   "txt-plsSelect": "請選擇",
   "txt-select": "選擇",
   "txt-selectAll": "全選",
+  "txt-deselectAll": "取消全選",
   "txt-selected": "已選擇",
   "txt-deselect": "取消選擇",
   "txt-back": "返回",
