Add two more text fields and optional establish date time picker.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -573,6 +573,7 @@
     "flowName": "Flow Name",
     "id": "ID",
     "title": "Title",
+    "incidentDescription": "Description",
     "category": "Category",
     "victimName": "Victim",
     "reporter": "Report Source",
@@ -583,6 +584,7 @@
     "sendTime": "Send Datetime",
     "createdDttm": "Create Datetime",
     "impactAssessment": "Impact Assessment",
+    "attackName": "Attack Name",
     "description": "Description",
     "socType": "SOC Type",
     "status": "Status",
@@ -631,6 +633,7 @@
     "select": "Send or Not",
     "Suggestion": "Event Handling Suggestion",
     "finalDate": "Limit DateTime",
+    "establishDate": "Establish DateTime",
     "tag": "Tag",
     "reviewDttm": "Review Time",
     "reviewerName": "Reviewer",
