--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -573,6 +573,7 @@
     "flowName": "流程名稱",
     "id": "事件單編號",
     "title": "事件主旨",
+    "incidentDescription": "事件描述",
     "category": "事件類別",
     "victimName": "單位",
     "reporter": "通報來源",
@@ -583,6 +584,7 @@
     "sendTime": "發布時間",
     "createdDttm": "建立時間",
     "impactAssessment": "影響等級",
+    "attackName": "攻擊手法",
     "description": "相關手法描述",
     "socType": "回報類型",
     "status": "狀態",
@@ -631,6 +633,7 @@
     "select": "是否發布",
     "Suggestion": "事件單處理意見",
     "finalDate": "逾期時間",
+    "establishDate": "成立時間",
     "tag": "標籤",
     "reviewDttm": "處理時間",
     "reviewerName": "處理人",
