--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -690,6 +690,7 @@
     "hbDttm": "最後上線時間",
     "sendStatus": "派送狀態",
     "executeStatus": "執行結果",
+    "taskStatus": "派送狀態",
     "taskStatusDescription": "派送狀態說明",
     "deviceCount": "主機數量",
     "ip": "IP",
