Add new SOC report page. Add new category type for Incident form.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -15,6 +15,7 @@
   "txt-ok": "OK",
   "txt-time": "Time",
   "txt-date": "Date",
+  "txt-dateRange": "Date Range",
   "txt-filter": "Filter",
   "txt-filterQuery": "Filter Query",
   "txt-search": "Search",
