--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -15,6 +15,7 @@
   "txt-ok": "確認",
   "txt-time": "時間",
   "txt-date": "日期",
+  "txt-dateRange": "日期區間",
   "txt-filter": "過濾",
   "txt-filterQuery": "過濾條件",
   "txt-search": "搜尋",
