--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -159,6 +159,7 @@
 	"txt-validTechniqueInfa": "請檢查是否正確輸入手法描述及指標類型資料",
 	"txt-validTTPs": "請檢查是否正確輸入攻擊手法資料",
 	"txt-validEvents": "請檢查是否正確輸入監控觸發紀錄資料",
+	"txt-validCategory": "請檢查是否正確輸入事件類別",
 	"txt-validBasic": "請檢查是否正確輸入事件單基本資料",
 	"txt-portValidationFail": "請輸入正確Port格式",
 	"txt-validUnit": "請檢查是否正確輸入資安事件申報機關資料",
