Add track host list dialog for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -75,6 +75,7 @@
   "txt-deselectAll": "Deselect All",
   "txt-selected": "Selected",
   "txt-deselect": "Deselect",
+  "txt-selectDate": "Select Date",
   "txt-back": "Back",
   "txt-normal": "Normal",
   "txt-success": "Success",
@@ -384,6 +385,8 @@
     "txt-cveScore": "Score",
     "txt-safetyScanType": "Safety Scan Type",
     "txt-downloadHostList": "Downlaod Host List",
+    "txt-trackHostList": "Track Host List",
+    "txt-downloadTrackList": "Download Track List",
     "txt-deviceNotAvailable": "Device is not available",
     "txt-export-cpe": "Export CPE",
     "txt-report-nccst": "Report NCCST",
