--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -75,6 +75,7 @@
   "txt-deselectAll": "取消全選",
   "txt-selected": "已選擇",
   "txt-deselect": "取消選擇",
+  "txt-selectDate": "選擇日期",
   "txt-back": "返回",
   "txt-normal": "正常",
   "txt-success": "成功",
@@ -383,7 +384,10 @@
     "txt-vans": "VANS",
     "txt-cveScore": "分數",
     "txt-safetyScanType": "安全掃描類型",
+    "txt-uploadHostList": "上傳弱點主機清單",
     "txt-downloadHostList": "下載弱點主機清單",
+    "txt-trackHostList": "弱點修復追蹤",
+    "txt-downloadTrackList": "下載追蹤清單",
     "txt-deviceNotAvailable": "主機不存在",
     "txt-export-cpe": "匯出CPE",
     "txt-report-nccst": "回報NCCST",
