--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -15,7 +15,7 @@
   "txt-ok": "確認",
   "txt-time": "時間",
   "txt-date": "日期",
-  "txt-dateRange": "日期區間",
+  "txt-dateRange": "時間區間",
   "txt-filter": "過濾",
   "txt-filterQuery": "過濾條件",
   "txt-search": "搜尋",
@@ -152,6 +152,7 @@
   "txt-networkBehavior": "網路行為",
   "txt-executableInfo": "執行內容",
   "txt-logSource": "日誌來源",
+  "txt-logReport": "日誌報表",
   "txt-indicator": "Indicator",
   "txt-online": "連線",
   "txt-offline": "離線",
