Add one more field for Topology Inventory page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1238,6 +1238,8 @@
   },
   "ipFields": {
     "timestamp": "Date",
+    "hmdVersion": "HMD Version",
+    "hbDttm": "Heartbeat Time",
     "seat": "Seat",
     "seatName": "Seat Name",
     "areaName": "Area Name",
