--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -151,6 +151,7 @@
 	"txt-analyze-success": "交辦成功",
 	"txt-analyze-fail": "交辦失敗",
 	"txt-day": "天",
+	"txt-monthlyReport": "月報",
 	"file-too-large": "上傳檔案過大，超過20MB",
 	"txt-checkRequiredFieldType": "請輸入正確欄位格式",
 	"txt-checkFileFieldType": "請輸入正確惡意檔案資料",
