Add no system option for System filter input in Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -399,6 +399,7 @@
     "txt-vansConfigUnitName": "Unit Name",
     "txt-vansConfigApiKey": "API Key",
     "txt-vansConfigApiUrl": "API URL",
+    "txt-noSystemDetected": "No system is detected",
     "txt-hostInfo": "Host Info",
     "txt-viewInfo": "View Info",
     "txt-hostList2": "Host",
@@ -407,6 +408,7 @@
     "txt-isNotHmd": "Not Installed",
     "txt-isLatestVersion": "Latest Version",
     "txt-isOldVersion": "Not Upgraded",
+    "txt-isNoVersion": "No Version",
     "txt-isOwnerNull": "No Owner",
     "txt-isAreaNull": "No Area",
     "txt-isSeatNull": "No Seat",
