--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -400,6 +400,7 @@
     "txt-vansConfigUnitName": "機關名稱",
     "txt-vansConfigApiKey": "API Key",
     "txt-vansConfigApiUrl": "API URL",
+    "txt-noSystemDetected": "未偵測到作業系統",
     "txt-hostInfo": "主機資訊",
     "txt-viewInfo": "查看內容",
     "txt-hostList2": "主機清單",
@@ -408,6 +409,7 @@
     "txt-isNotHmd": "未安裝",
     "txt-isLatestVersion": "最新版",
     "txt-isOldVersion": "未升版",
+    "txt-isNoVersion": "無版號",
     "txt-isOwnerNull": "未設定使用者",
     "txt-isAreaNull": "未設定樓層",
     "txt-isSeatNull": "未設定座位",
