Add column text field for Events query dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -584,6 +584,7 @@
       "txt-publicOpenQuery": "Open Public Query Filter",
       "txt-publicSaveQuery": "Save Public Query Filter",
       "txt-addSoarFlow": "Add Flow",
+      "txt-addColumn": "Add Column",
       "txt-querySaved": "Query Filter Saved",
       "txt-queryName": "Query Filter Name",
       "txt-addQuery": "Add New Query",
