--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -584,6 +584,7 @@
       "txt-publicOpenQuery": "開啟公用查詢條件",
       "txt-publicSaveQuery": "儲存公用查詢條件",
       "txt-addSoarFlow": "新增流程",
+      "txt-addColumn": "新增欄位",
       "txt-querySaved": "查詢條件已儲存",
       "txt-queryName": "查詢條件名稱",
       "txt-addQuery": "新增查詢條件",
