--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -947,6 +947,7 @@
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-comporessSuccessFileCount": "壓縮成功檔案數",
     "txt-vulnerabilityInfo": "用戶端設備漏洞偵測",
     "txt-VulnerabilityCount": "用戶端漏洞設備數",
     "txt-learningInterval": "執行序執行學習時間(秒)",
