Re-construct the buttons for Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -199,7 +199,11 @@
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
-  "txt-exportSecurityDiagnostic": "$t(txt-export) Security Diagnostic",
+  "txt-export-scanFile": "$t(txt-export) Malware",
+  "txt-export-gcbDetection": "$t(txt-export) GCB",
+  "txt-export-getFileIntegrity": "$t(txt-export) File Integrity",
+  "txt-export-getVansCpe": "$t(txt-export) CPE",
+  "txt-export-getVansCve": "$t(txt-export) CVE",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
   "txt-duplicatedName": "Name is duplicated",
@@ -381,6 +385,9 @@
   "host": {
     "txt-hostList": "Host List",
     "txt-cpePage": "CPE",
+    "txt-endpointSecuritySettings": "Endpoint Security Settings",
+    "txt-securityDiagnostic": "Security Diagnostic",
+    "txt-hostItem": "Host Item",
     "txt-deviceMap": "Device Map",
     "txt-safetyScan": "Safety Scan",
     "txt-vans": "VANS",
@@ -897,10 +904,13 @@
   "hmd-scan": {
     "txt-hmdSettings": "HMD Settings",
     "txt-hmdDownload": "HMD $t(txt-download)",
+    "txt-hmdDownloadWindows": "HMD $t(txt-download): Windows",
+    "txt-hmdDownloadLinux": "HMD $t(txt-download): Linux",
     "txt-uploadHMDfile": "Upload HMD setup file",
     "txt-hmdSetupFile": "HMD setup file",
     "txt-uplaodSuccess": "HMD setup file has been uploaded successfully",
     "txt-triggerAll": "Trigger All (HMD)",
+    "txt-exportChart": "Export Chart",
     "txt-vansPatch": "VANS Patch",
     "txt-vansPatchRecord": "VANS Patch Record",
     "txt-vansPatchHost": "VANS Patch Host",
