--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -199,7 +199,11 @@
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
-  "txt-exportSecurityDiagnostic": "$t(txt-export)資安健診",
+  "txt-export-scanFile": "$t(txt-export)Malware",
+  "txt-export-gcbDetection": "$t(txt-export)GCB",
+  "txt-export-getFileIntegrity": "$t(txt-export)File Integrity",
+  "txt-export-getVansCpe": "$t(txt-export)CPE",
+  "txt-export-getVansCve": "$t(txt-export)CVE",
   "txt-maxDataMsg": "資料筆數最大為10,000筆",
   "txt-es-data-over-limit": "超出搜尋範圍，請修改查詢條件",
   "txt-duplicatedName": "名稱不得重複",
@@ -381,6 +385,9 @@
   "host": {
     "txt-hostList": "主機列表",
     "txt-cpePage": "CPE維護",
+    "txt-endpointSecuritySettings": "端點安全設定",
+    "txt-securityDiagnostic": "資安健診",
+    "txt-hostItem": "主機項目",
     "txt-deviceMap": "裝置地圖",
     "txt-safetyScan": "安全掃描",
     "txt-vans": "VANS",
@@ -897,10 +904,13 @@
   "hmd-scan": {
     "txt-hmdSettings": "HMD設定",
     "txt-hmdDownload": "HMD$t(txt-download)",
+    "txt-hmdDownloadWindows": "HMD$t(txt-download): Windows",
+    "txt-hmdDownloadLinux": "HMD$t(txt-download): Linux",
     "txt-uploadHMDfile": "上傳HMD安裝檔",
     "txt-hmdSetupFile": "HMD安裝檔",
     "txt-uplaodSuccess": "HMD安裝檔上傳成功",
     "txt-triggerAll": "全部檢測(HMD)",
+    "txt-exportChart": "匯出報表",
     "txt-vansPatch": "VANS Patch",
     "txt-vansPatchRecord": "VANS Patch紀錄",
     "txt-vansPatchHost": "派送主機",
