Add Notify Status switch toggle for Edge page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -848,6 +848,7 @@
     "txt-chassisAddress": "Chassis Address",
     "txt-chassisLocation": "Chassis Location",
     "txt-contact": "Contact",
+    "txt-notifyStatus": "Notify Status",
     "txt-upgradeTime": "Upgrade Date time",
     "txt-lastUpdateTime": "Last Update Time",
     "txt-anyTime": "Any Time",
